src/parser.leg
%{
  #include "mojo.h"
  #define YYSTYPE char *
  #define DUP yy = strdup(yytext)
  #define LPAREN '{'
  #define RPAREN '}'
  #define pc putchar
  #define p printf
%}

main       = { pc('\'') } 
           body+
             { pc('\'') }

body       = comment
           | var
           | enum
           | nl    
             { p("\\n\\\n") }
           | < . >
             { p("%s", yytext) }

comment    = open '!' < (!close .)* > close

var        = open a:id close
             { p("' + (Mojo.escape(Mojo.normalize(o, \"%s\"))) + '", a) }
           | open '.' close
             { p("' + (Mojo.escape(Mojo.normalize(o))) + '") }

enum       = open '#' - a:id close
             { p("' + %s(o, Mojo.normalize(o, \"%s\"), function(o)%c\n    return '", MOJO_ENUM_FN, a, LPAREN) }
           | open '#' - '.' close
             { p("' + %s(o, Mojo.normalize(o), function(o)%c\n    return '", MOJO_ENUM_FN, LPAREN) }
           | open '/' - a:id close
             { p("'%c) + '", RPAREN) }
           | open '/' - '.' close
             { p("'%c) + '", RPAREN) }
 
id         = < [a-zA-Z0-9_]+ > 
             { DUP }

open       = '{'+ -
close      = - '}'+
nl         = '\r' | '\r\n' | '\n'
-          = [ \t]*

%%

void 
Mojo_parse() {
  while (YYPARSE()); 
}
